passenger gem added

--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -1,79 +1,6 @@
-	<!-- ============================================================== -->
- <!-- Start right Content here -->
- <!-- ============================================================== -->
- <div class="content-page">
-  <!-- Start content -->
-  <div class="content">
-   <div class="container">
-    <!-- Page-Title -->
-    <div class="row1">
-      <div class="col-sm-12">
-        <h4 class="page-title">Add Ecet Questions</h4>
-        <ol class="breadcrumb">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Cets</a></li>
-          <li class="active">Add Questions</li>
-        </ol>
-        <% if notice %>
-        <div class="alert alert-success alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= notice %>
-        </div>
-        <% end %>
-        <% if alert %>
-        <div class="alert alert-warning alert-dismissible" role="alert">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <%= alert %>
-        </div>
-        <% end %>
-      </div>
-    </div>
-  </div>  
-
-
 <div class="container">
-<div class="row">
-  <% @cets = Cet.all%>
-  <%= simple_form_for @ecet, url: {:action => "addecet",  :method => "post"} do |f| %>
-<!--   <%= f.collection_select :subject, @subjects.all, :id, {prompt: "Select an Subject"}, {class: "form-control", :style=>'width:100%', :required => true} %><br><br> -->
-<div class="row">
-<div class="col-sm-8">
-<div class="col-sm-6">
-<!-- 
-<%= f.collection_select :cet, @cets.all, :id, :name, {:prompt => "Select Cet"},{class: "form-control", :style=>'width:100%', :required => true} %>
- -->
- <%= f.hidden_field :cet, :value => "ecet" %><h4> <b>ECET</b></h4></div>
-<div class="col-sm-6">
-   <%= f.input :subject, :required => true, :collection => ['Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering'], :label => false, :input_html => {:style => "width:100%;", :class => "form-control"}, :prompt => "Select Subject" %><br>
-</div>
-</div>
-</div>
-<!--  <%= f.input :subject, :required => true, :placeholder => "subject", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %> -->
-  <%= f.input :question, :required => true, :placeholder => "Add Question", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %><br>
+<a href="/ecetform/1">Test1</a><br>
+<a href="/ecetform/2">Test2</a><br>
+<a href="/ecetform">New Test</a>
 
-  <div class="row">
-  <!-- <div class="col-sm-8"> -->
-  <div class="col-sm-4">
-  <%= f.input :a, :required => true, :placeholder => "option A", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-  <%= f.input :b, :required => true, :placeholder => "option B", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-    </div>
-    <div class="col-sm-4">
-  <%= f.input :c, :required => true, :placeholder => "option C", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-  <%= f.input :d, :required => true, :placeholder => "option D", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-  </div>
-    <div class="col-sm-4">
-  <%= f.input :t, :placeholder => "True Answer", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-   <%= f.input :tc, :placeholder => "Test Count", :label => false, :input_html => {:style => "width:100%;", :class => "form-control"} %>
-   </div>
-<!-- </div> -->
- 
-</div>
-
-<div class="text-center">
- <%= f.submit "submit", :class => "btn btn-primary" %>
- </div>
-  <% end %>
-</div>
-</div>
-</div>
 </div>
