--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,9 +18,10 @@
     </div>
     </div>
     <div class="col-sm-8 text-left"> 
-    <a href="/ecetform">Add Ecet Question </a>
-    <a href="/eamcetform">Add Ecet Question </a>
-      <%= link_to "Exam", "/exam" %>
+    <a href="/ecet/">Add Ecet Question </a>
+    <a href="/eamcetform">Add Eamcet Question </a>
+      <%= link_to "Exam-1", "/exam/1" %>
+      <%= link_to "Exam-2", "/exam/2" %>
       <hr>
 
        <div class="sidenav">
