--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -9,7 +9,6 @@ alert(" Name : " + name + " \n Email : " + email + " \n Form Tag : <form>\n\n Fo
  </script> -->
 
  <div class="container-fluid">
-<div style="min-height:150px; min-width:100%"></div>
 <% if notice %>
         <div class="alert alert-success alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -22,35 +21,43 @@ alert(" Name : " + name + " \n Email : " + email + " \n Form Tag : <form>\n\n Fo
           <%= alert %>
         </div>
         <% end %>
-
+</div>
+<br>
 	<div class="container">
-	<div class="col-sm-4"></div>
-	<div class="col-sm-8">
+	<div class="col-sm-12">
+<% @questions.each do |q| %>
+  <div class="panel panel-default">
+    <div class="panel-body"><%= q.question%></div>
+  </div>
+<div style="width:90%; height: 100px"><img src="/images/googleadwordslogo.jpg" width="90%" height="100px" ></div>
+<div class="panel panel-default">
+          <div class="panel-body">
+          <div class="col-sm-8">
+           <%= simple_form_for @submitque, :input_html => {:id => "form_id", :class => "form-horizontal"}, url: {action: "submitque", method: "post"} do |f| %> 
+              <%= f.error_notification %>
 
+               <%= f.hidden_field :question, :value => q.id %>
+                <%= f.hidden_field :tc, :value => q.tc %>
+               <%= f.input :answer, as: :radio_buttons, :required => true, :label => false, collection: [q.a, q.b,q.c,q.d], wrapper: :vertical_radio_and_checkboxes %>
+                <% disabled = Submitque.where(:userid => current_user, :question => q.id) %>
+                   <% if disabled.empty? %>
+                      <%= f.submit "submit", :class => "btn btn-primary"%>
+                  <% else %>
+                      <p class="btn btn-primary disabled"><abbr title="Already submitted">Answer Submitted</abbr></p>
+                   <% end %>
 
- 
- <% @questions.each do |q| %>
-<%= q.question%>
- <%= simple_form_for @submitque, :input_html => {:id => "form_id", :class => "form-horizontal"}, url: {action: "submitque", method: "post"} do |f| %> 
-    <%= f.error_notification %>
-
-     <%= f.hidden_field :question, :value => q.id %>
-      <%= f.hidden_field :tc, :value => q.tc %>
-     <%= f.input :answer, as: :radio_buttons, :required => true, :label => false, collection: [q.a, q.b,q.c,q.d], wrapper: :vertical_radio_and_checkboxes %>
-      <% disabled = Submitque.where(:userid => current_user, :question => q.id) %>
-         <% if disabled.empty? %>
-            <%= f.submit "submit", :class => "btn btn-primary"%>
-        <% else %>
-            <p class="btn btn-primary disabled">Submit</p>
-         <% end %>
-
-    
+              
+            <% end %>
+           </div>
+            <div class="col-sm-4 text-center"><br><br><br>
+                <button class="btn btn-success">Finshed Exam</button>
+            </div>
+             </div>
   <% end %>
-
-  <% end %>
-
+</div>
   <%= will_paginate @questions, :previous_label => "Previous", :next_label => 'Next', :page_links => false, renderer: BootstrapPagination::Rails %>
 </div>
+<div style="width:90%; height: 100px"><img src="/images/googleadwordslogo.jpg" width="90%" height="100px" ></div>
 </div>
 		</div>
 
