--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     /*#mouseover{*/
     a:hover {
         background-color: lightblue!important;
-        border-radius: 20px;
+        /*border-radius: 20px;*/
     }
   /*}*/
 </style>
@@ -24,7 +24,7 @@
 
     <ul class="nav navbar-nav navbar-right" id="mouseover">
      <li>  <%= link_to('My Account', edit_user_registration_path) %></li>
-      <li><a href ="/logout">logout </a> </li>
+      <li><a href ="/logout">Logout </a> </li>
      
     </ul>
   </div>
