--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -1,20 +1,33 @@
 <div class="container">
-<div style="width:90%; height: 200px"><img src="/images/googleadwordslogo.jpg" width="90%" height="200px" ></div>
+<div style="width:90%; height: 200px"><img src="/images/googleadwordslogo.jpg" width="90%" height="160px" ></div>
 <% i = 1 %>
+<div class="row">
+<div class="col-sm-3"></div>
+<div class="col-sm-6">
 <table class="table table-bordered">
 	<tr>
-		<th>Test</th>
-		<th>Date</th>
-		<th></th>
+		<th class="success">Test</th>
+		<th class="success">Date</th>
+		<th class="success"></th>
 	</tr>
+	<!-- <% j = 1 %> -->
+	<% count = @comptest.count %>
 <% @comptest.each do |c| %>
 	<tr>
 		<td>Exam-<%= i %></td>
 		<td><%= c.created_at %></td>
 		<td><a href="/exam/<%= i %>" >Start Exam </a></td>
+	<!-- 	
+		<% if j == (count/2) %>
+			<div style="width:90%; height: 200px"><img src="/images/googleadwordslogo.jpg" width="90%" height="200px" ></div>
+		<% end %>
+		<% j+= 1 %> -->
+
 	<% i+=1 %>
-	
+	</tr>
 <% end %>
 
 </table>
+</div>
+</div>
 </div>
