--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
   <meta http-equiv="pragma" content="no-cache">
 </head>
-<body>
+<body class="gray-bg  pace-done">
 
 <% if user_signed_in? %>
 <%= render :partial => 'layouts/navbar' %>
