--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,15 +3,20 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  
+  <div class="alert alert-danger">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= devise_error_messages! %>
+    </div>
 
+<div class="ibox-content">
    <div class="field">
-    <%= f.label :firstname %><br />
+    <%= f.label :firstname %><br/>
     <%= f.text_field :firstname, autofocus: true %>
   </div>
 
    <div class="field">
-    <%= f.label :lastname %><br />
+    <%= f.label :lastname %><br/>
     <%= f.text_field :lastname %>
   </div>
 
@@ -45,9 +50,11 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+
+    <%= f.submit "Sign up", :class => "btn btn-primary m-b" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
 </div>
