--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
   
   <!-- <div class="row content"> -->
-  <% if notice %>
+  <% if notice && (notice == "Signed in successfully." || notice == "Alert! You need to sign in or sign up before continuing") %>
         <div class="alert alert-success alert-dismissible" role="alert">
           <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
           <%= notice %>
