--- a/app/views/layouts/_navbar2.html.erb
+++ b/app/views/layouts/_navbar2.html.erb
@@ -8,7 +8,7 @@
   /*}*/
 </style>
 
-<nav class="navbar navbar-default" style="background-color: white!important; border:none!important">
+<nav class="navbar navbar-default white-bg">
   <div class="container-fluid">
   <div class="col-md-4">
     <a href="/"><img src="http://4.bp.blogspot.com/-Yp__6jsC768/WLqhUlOxbKI/AAAAAAAAGW8/88WLFB8tRko43XjthNQSDnzj8GwgNODSACK4B/s1600/SBTET%2BWORLD1.png" width="60%"></a>
