--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
+  
+  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
   <meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
   <meta http-equiv="pragma" content="no-cache">
 </head>
@@ -32,12 +35,15 @@
 
 
 
+<!-- <footer class="text-center">Copyright &copy; <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank">Khalidh</a> </footer> -->
+<br><br><br>
+<footer class="text-center footer navbar-fixed-bottom">
+  <a href="https://www.linkedin.com/in/khalidh-sd-96284239/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
-<!-- <div class="container">
- <footer class="footer">
+  <a href="https://www.facebook.com/khalidh.khalid" target="_blank"><i class="fa fa-facebook-square" style="font-size:30px"></i></a>&nbsp;&nbsp;&nbsp;
 
-  <a href="https://www.facebook.com/khalidh.khalid" target="_blank">Khalidh</a>
+  <a href="https://plus.google.com/u/0/107659702751121090928" target="_blank"><i class="fa fa-google-plus-square" style="font-size:30px"></i></a>
 </footer>
-</div> -->
+
 </body>
 </html>
