--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <a href="/ecet/cse">CSE</a>
-<a href="">ECE</a>
-<a href="">EEE</a>
-<a href="">MECHANICAL</a>
+<a href="/ecet/ece">ECE</a>
+<a href="/ecet/eee">EEE</a>
+<a href="/ecet/mechanical">MECHANICAL</a>
 <a href="/ecet/civil">CIVIL</a>
 
 </div>
