--- a/app/views/exam/index.html.erb
+++ b/app/views/exam/index.html.erb
@@ -73,7 +73,7 @@ alert(" Name : " + name + " \n Email : " + email + " \n Form Tag : <form>\n\n Fo
               </script>
               </div>
             <div class="col-sm-4 text-center"><br><br><br>
-                <a href="/ecetresults/<%= q.tc %>" > <button class="btn btn-success">Finshed Exam</button></a>
+                <a href="/ecetresults/<%= q.tc %>/<%= @subject %>" > <button class="btn btn-success">Finshed Exam</button></a>
             </div>
              </div>
   <% end %>
