--- a/app/views/ecet/index.html.erb
+++ b/app/views/ecet/index.html.erb
@@ -26,7 +26,7 @@
 			<tr>
 				<td>Exam-<%= i %></td>
 				<td><%= c.created_at %></td>
-				<td><a href="/exam/<%= i %>/<%= @subject %>" >Start Exam </a></td>
+				<td><a href="/exam/<%= c.tc %>/<%= @subject %>" >Start Exam </a></td>
 			
 			</tr>
 			<% if i == ad %>
