--- a/app/views/ecet/subjects.html.erb
+++ b/app/views/ecet/subjects.html.erb
@@ -1,8 +1,111 @@
-<div class="container">
-<a href="/ecet/cse">CSE</a>
-<a href="/ecet/ece">ECE</a>
-<a href="/ecet/eee">EEE</a>
-<a href="/ecet/mechanical">MECHANICAL</a>
-<a href="/ecet/civil">CIVIL</a>
+<div class="container-fluid">
+<div class="text-center"> 
+	<!-- INSERT ADD HERE -->
+	<script ></script>
+	<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px">
+    </ins>
+    <script>
+    	(adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
 
+<div class="row">
+	<div class="col-md-3 text-center">
+			<script ></script>
+			<ins class="adsbygoogle" style="display:inline-block;width:100px;height:500px">
+		    </ins>
+		    <script>
+		    	(adsbygoogle = window.adsbygoogle || []).push({});
+		    </script>
+	</div>
+	<div class="col-md-6">
+
+	<div class="panel panel-info">
+      <!-- <div class="panel-heading"><a href="/ecet/cse">Computer Science</a><br></div> -->
+      <div class="panel-body">
+      	<div clsaa="row">
+      		<div class="col-md-6">Computer Science Test Exams</div>
+      		<div class="col-md-6 text-center"><a href="/ecet/cse">Exam List</a></div>
+      </div>
+      </div>
+    </div>
+
+    <div class="panel panel-info">
+      <!-- <div class="panel-heading"><a href="/ecet/ece">Electronics & Communication</a><br></div> -->
+      <div class="panel-body">
+      	<div clsaa="row">
+      		<div class="col-md-6">Electronics & Communication Test Exams</div>
+      		<div class="col-md-6 text-center"><a href="/ecet/ece">Exam List</a></div>
+      </div>
+      </div>
+    </div>
+
+    <div class="text-center"> 
+	<!-- INSERT ADD HERE -->
+			<script ></script>
+			<ins class="adsbygoogle" style="display:inline-block;width:600px;height:90px">
+		    </ins>
+		    <script>
+		    	(adsbygoogle = window.adsbygoogle || []).push({});
+		    </script>
+	</div><br>
+
+    <div class="panel panel-info">
+      <!-- <div class="panel-heading"><a href="/ecet/eee">Electrical & Electronics</a><br></div> -->
+      <div class="panel-body">
+      	<div clsaa="row">
+      		<div class="col-md-6">Electrical & Electronics Test Exams</div>
+      		<div class="col-md-6 text-center"><a href="/ecet/eee">Exam List</a></div>
+      </div>
+      </div>
+    </div>
+
+    <div class="panel panel-info">
+      <!-- <div class="panel-heading"><a href="/ecet/mechanical">MECHANICAL</a><br></div> -->
+      <div class="panel-body">
+      	<div clsaa="row">
+      		<div class="col-md-6">MECHANICAL Test Exams</div>
+      		<div class="col-md-6 text-center"><a href="/ecet/mechanical">Exam List</a></div>
+      </div>
+      </div>
+
+      </div>
+    
+
+     <div class="panel panel-info">
+      <!-- <div class="panel-heading"><a href="/ecet/civil">CIVIL</a><br></div> -->
+      <div class="panel-body">
+      <div clsaa="row">
+      		<div class="col-md-6">Civil Test Exams</div>
+      		<div class="col-md-6 text-center"><a href="/ecet/civil">Exam List</a></div>
+      </div>
+      </div>
+    </div>
+    </div>
+
+
+<!-- <div class="panel-body">
+      <div clsaa="row">
+      		<div class="col-md-6">Mathematics Questions<br>Physics Questions<br>Chemistry Questions<br>Civil Questions</div>
+      		<div class="col-md-6 text-center"><br><a href="/ecet/civil">Start Exam</a></div>
+    </div>
+    </div></div> -->
+<!-- Mathematics','Physics','Chemistry','Civil', 'Electrical & Electronics', 'Mechanical', 'Electronics & Communication', 'Computer Science and Engineering -->
+		<!-- <a href="/ecet/cse">Computer Science Engineering </a><br>
+		<a href="/ecet/ece">ECE</a><br>
+		<a href="/ecet/eee">EEE</a><br>
+		<a href="/ecet/mechanical">MECHANICAL</a><br>
+		<a href="/ecet/civil">CIVIL</a><br>
+		</div> -->
+
+<div class="col-md-3 text-center">
+	<script ></script>
+			<ins class="adsbygoogle" style="display:inline-block;width:100px;height:500px">
+		    </ins>
+		    <script>
+		    	(adsbygoogle = window.adsbygoogle || []).push({});
+		    </script>
+</div>
+
+</div>
 </div>
